# Ibex-DEPRECATED

./: .gitignore  .gitmodules  COPYING  LICENSE  MIGRATION.MD  README  basic.bt  basic.ot  gitupdate.sh  launchTest.launch  setup.sh  update.sh
src/animatics_smart_motor/: CMakeLists.txt  README.md  package.xml
src/animatics_smart_motor/catkin_generated/: animatics_smart_motor-msg-extras.cmake.develspace.in  animatics_smart_motor-msg-extras.cmake.installspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/animatics_smart_motor/catkin_generated/installspace/: animatics_smart_motor.pc  animatics_smart_motorConfig.cmake
src/animatics_smart_motor/cmake/: animatics_smart_motor-genmsg-context.py  animatics_smart_motor-genmsg.cmake
src/animatics_smart_motor/launch/: OdomToTf.launch  SmartMotor.launch
src/animatics_smart_motor/msg/: EStop.msg  MotorsConnected.msg
src/animatics_smart_motor/music/: bonnefete.music  marcheimperiale.music  tetris.music  zelda.music
src/animatics_smart_motor/scripts/: SmartMotorNode.py  calibrator.py  estop_watcher.py  motors_music.py  odom_to_tf.py  smart_motor_node.py
src/animatics_smart_motor/scripts/includes/: abstract_motor.py  config.py  motor.py  motor_controller.py  position.py
src/animatics_smart_motor/scripts/includes/commands/: __init__.py  command.py  disable_limits.py  echo.py  open_port.py  report_actual_position.py  report_amps.py  report_status.py  report_temperature.py  reset_encoders.py  reset_flags.py  set_absolute_position.py  set_acceleration.py  set_address.py  set_baudrate.py  set_error_limit.py  set_left_hard_limit_off.py  set_mode.py  set_right_hard_limit_off.py  set_soft_limit.py  set_speed.py  set_torque.py  sleep.py  start_move.py  stop_move.py  wait.py  wake.py
src/animatics_smart_motor/scripts/includes/io/: serial_com.py
src/animatics_smart_motor/scripts/includes/responses/: report_actual_position_response.py  report_amps_response.py  report_status_response.py  response.py  response_parser.py  status.py
src/animatics_smart_motor/srv/: SetMotorsSpeed.srv
src/capra_filters/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.html  README.org  nodelet_plugins.xml  package.xml
src/capra_filters/catkin_generated/: capra_filters-msg-extras.cmake.develspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/capra_filters/catkin_generated/installspace/: _setup_util.py  capra_filters-msg-extras.cmake  capra_filters-msg-paths.cmake  capra_filters.pc  capra_filtersConfig.cmake
src/capra_filters/cmake/: capra_filters-genmsg-context.py  capra_filters-genmsg.cmake
src/capra_filters/filterchain/: LeftFilters.launch  RightFilters.launch  Sim.launch
src/capra_filters/gtest/: CTestTestfile.cmake  Makefile
src/capra_filters/include/capra_filters/: filter.h
src/capra_filters/launch/: Calibrate.launch  Demo.launch  Left.launch  Manager.launch  Real.launch  Right.launch  Sim.launch  Test.launch
src/capra_filters/rqt/: capra_filters.perspective
src/capra_filters/scripts/: capra_filters_manager.py  compile_filterchain.py  image_to_pointcloud.py  obstacle_filter.cfg  obstacle_filter.py  perspective_calibration.py  web_ui_node.py
src/capra_filters/scripts/web_ui/util/: message_encoder.py
src/capra_filters/src/capra_filters/: bgr2rgb.cfg  bgr2rgb.cpp  blur_filter.cfg  blur_filter.cpp  flag_detector.cfg  flag_detector.cpp  image_to_pointcloud.cfg  image_to_pointcloud.cpp  perspective_calibration.cfg  perspective_calibration.cpp  rectangle.cfg  rectangle.cpp  resize.cfg  resize.cpp  section_filter.cfg  section_filter.cpp  threshold.cfg  threshold.cpp  warp_perspective.cfg  warp_perspective.cpp
src/capra_filters/srv/: LaunchFilter.srv
src/capra_lidar/: .gitignore  CMakeLists.txt  package.xml
src/capra_lidar/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/capra_lidar/catkin_generated/installspace/: capra_lidar.pc  capra_lidarConfig.cmake
src/capra_lidar/config/: laser_threshold.yaml  laser_threshold_5m.yaml
src/capra_lidar/include/: scan_to_cloud_hf_node.h
src/capra_lidar/launch/: FakeImu.launch  LMS100.launch  LaserScanMerger.launch  OdomPublisher.launch
src/capra_lidar/scripts/: capra6_lidar_filter.py  fake_imu.py  laser_scan_merger.py  max_range.py  pose2D_to_odom.py
src/capra_lidar/src/: scan_to_cloud_hf_node.cpp
src/capra_motor_calibrator/: CMakeLists.txt  package.xml
src/capra_motor_calibrator/catkin_generated/: capra_motor_calibrator-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/capra_motor_calibrator/catkin_generated/installspace/: capra_motor_calibrator-msg-extras.cmake  capra_motor_calibrator.pc  capra_motor_calibratorConfig.cmake
src/capra_motor_calibrator/cmake/: capra_motor_calibrator-genmsg-context.py  capra_motor_calibrator-genmsg.cmake
src/capra_motor_calibrator/launch/: MotorCalibrator.launch  motor_calibrator-old.launch
src/capra_motor_calibrator/scripts/: motor_calibration_node.py
src/capra_swivel/: CMakeLists.txt  package.xml
src/capra_swivel/Capra_swivel_spi/: Capra_swivel_spi.ino
src/capra_swivel/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/capra_swivel/catkin_generated/installspace/: capra_swivel.pc  capra_swivelConfig.cmake
src/capra_teleop/: .gitignore  CMakeLists.txt  README.md  package.xml
src/capra_teleop/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/capra_teleop/catkin_generated/installspace/: capra_teleop.pc  capra_teleopConfig.cmake
src/capra_teleop/launch/: Teleop.launch  TeleopMind.launch  TeleopPanTilt.launch
src/capra_teleop/scripts/: mind_teleop_client.py  teleop.py  teleop_mind.py  teleop_pan_tilt.py
src/rosjava/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
src/rosjava/capra_msgs/: build.gradle  package.xml
src/rosjava/gradle/wrapper/: gradle-wrapper.properties
(+1203 files in other folders)
