<?xml version="1.0"?>
<package>
  <name>animatics_smart_motor</name>
  <version>0.0.9</version>
  <description>Driver for a differential drive robot using Animatics SM23165DT motors</description>
  <maintainer email="mathieuglefebvre@gmail.com">Mathieu Gascon-Lefebvre</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/clubcapra/animatics_smart_motor</url>
  <author email="mathieuglefebvre@gmail.com">Mathieu Gascon-Lefebvre</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  
</package>