<?xml version="1.0"?>
<package>
    <name>capra_swivel</name>
    <version>0.0.1</version>
    <description>Node that control Read the serial port for the value of the encoder</description>
    <maintainer email="capra@clubcapra.com">Capra</maintainer>
    <licence>GPLv3</licence>
    <url type="repository">https://github.com/clubcapra/Ibex</url>
    <author email="capra@clubcapra.com">Capra</author>

    <run_depend>roboteq_driver</run_depend>
</package>